added partial header & footer

--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,5 +1,9 @@
-<h1 class="text-red-400">This is my 1st app ever whooo!!!!</h1>
-<h2>OLA</h2>
-<h2>OLA24</h2>
-<h3>Branch 2</h3>
-<h4>Branch12323</h4>
+<div class="h-[200vh] px-4 ">
+    <div class="py-6">
+        <h1 class="text-red-400">This is my 1st app ever whooo!!!!</h1>
+        <h2>OLA</h2>
+        <h2>OLA24</h2>
+        <h3>Branch 2</h3>
+        <h4>Branch12323</h4>
+    </div>
+</div>
