--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,9 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body>
+  <body class="relative">
+  <%=render 'Navbar/navbar' %>
     <%= yield %>
+    <%=render 'Footer/footer' %>
   </body>
 </html>
