--- a/app/views/Navbar/_navbar.html.erb
+++ b/app/views/Navbar/_navbar.html.erb
@@ -1,5 +1,5 @@
-<nav class="bg-gray-800 border-gray-200 max-w-[100rem] mx-auto font-dosis h-14 sticky top-0">
-    <div class="h-full w-full px-4 items-center flex justify-between">
+<nav class="bg-gray-800 border-gray-200 max-w-[100rem] mx-auto font-dosis h-16 sticky top-0">
+    <div class="h-full w-full px-4 items-center flex justify-between max-w-7xl mx-auto">
         <div>
             <h1 class="font-bold text-white text-3xl">Ideator</h1>
         </div>
