--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,25 +1,56 @@
 <div class="h-[1rem]">
 </div>
-<div class="min-h-screen   bg-gray-50 px-4">
-   <form class="simple_form new_idea max-w-5xl mx-auto" id="new_idea" action="/ideas" accept-charset="UTF-8" method="post">
-  <input type="hidden" name="authenticity_token" autocomplete="off">
-  <div class="mb-4 text optional idea_description">
-    <label class="block text optional text-sm font-medium text-gray-600" for="idea_description">Description</label>
-    <textarea class="max-h-[30rem] overflow-y-auto shadow appearance-none border border-gray-300 rounded w-full py-2 px-3 bg-white focus:outline-none focus:ring-0 focus:border-blue-500 text-gray-400 leading-6 transition-colors duration-200 ease-in-out text optional" name="idea[description]" id="idea_description"></textarea>
-  </div>
-  <div class="mb-4 string optional idea_author">
-    <label class="block string optional text-sm font-medium text-gray-600" for="idea_author">Author</label>
-    <input class="shadow appearance-none border border-gray-300 rounded w-full py-2 px-3 bg-white focus:outline-none focus:ring-0 focus:border-blue-500 text-gray-400 leading-6 transition-colors duration-200 ease-in-out string optional" type="text" name="idea[author]" id="idea_author">
-  </div>
-  <div class="flex justify-end w-full">
-  <button type="submit" class= "bg-gray-800 px-4 w-fit py-1 px-2 rounded-xl  text-white" type="submit" name="commit" value="Submit" data-disable-with="Submit">
-    Submit
-  </button>
-  </div>
-</form>
-    <div class=" mt-4 grid md:grid-cols-2 grid-cols-1 md:gap-4 gap-4">
+<div class="min-h-[200vh]  bg-gray-50 px-4">
+    <div data-controller='modal'>
+        <div class="max-w-5xl flex w-full mx-auto justify-end">
+            <button data-modal-target="default-modal" data-modal-toggle="default-modal" class="block text-white bg-gray-800 hover:bg-gray-700  focus:outline-none font-medium rounded-xl text-sm px-5 py-2.5 text-center cursor-pointer" type="button">
+                Add New Idea
+            </button>
+        </div>
+
+        <div id="default-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            <div class="relative  mb-4 bg-gray-200 rounded-xl p-4 w-full max-w-2xl max-h-full">
+                <div class="relative bg-gray-200 rounded-lg ">
+                <h1 class="text-center text-2xl font-medium mb-2">Add your idea here..</h1>
+                    <form class="simple_form new_idea max-w-5xl mx-auto" id="new_idea" action="/ideas" accept-charset="UTF-8" method="post">
+                        <input type="hidden" name="authenticity_token" autocomplete="off">
+                        <div class="mb-4 text optional idea_description">
+                            <label class="block text optional text-sm font-medium text-gray-600" for="idea_description">Description</label>
+                            <textarea required class="max-h-[30rem] overflow-y-auto shadow appearance-none border border-gray-300 rounded w-full py-2 px-3 bg-white focus:outline-none focus:ring-0 focus:border-blue-500 text-gray-400 leading-6 transition-colors duration-200 ease-in-out text optional" name="idea[description]" id="idea_description"></textarea>
+                        </div>
+                        <div class="mb-4 string optional idea_author">
+                            <label class="block string optional text-sm font-medium text-gray-600" for="idea_author">Author</label>
+                            <input required class="shadow appearance-none border border-gray-300 rounded w-full py-2 px-3 bg-white focus:outline-none focus:ring-0 focus:border-blue-500 text-gray-400 leading-6 transition-colors duration-200 ease-in-out string optional" type="text" name="idea[author]" id="idea_author">
+                        </div>
+                        <div class="flex justify-end w-full">
+                            <button type="submit" class="bg-gray-800 px-4 w-fit py-1 px-2 font-medium rounded-lg text-sm px-5 py-2.5 rounded-xl  text-white" type="submit" name="commit" value="Submit" data-disable-with="Submit">
+                                Submit
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <form class="simple_form new_idea max-w-5xl mx-auto" id="new_idea" action="/ideas" accept-charset="UTF-8" method="post">
+        <input type="hidden" name="authenticity_token" autocomplete="off">
+        <div class="mb-4 text optional idea_description">
+            <label class="block text optional text-sm font-medium text-gray-600 mb-1" for="idea_description">Description :</label>
+            <textarea  class="max-h-[30rem] overflow-y-auto shadow appearance-none border border-gray-300 rounded w-full py-2 px-3 bg-white focus:outline-none focus:ring-0 focus:border-blue-500 text-gray-400 leading-6 transition-colors duration-200 ease-in-out text optional" name="idea[description]" id="idea_description"></textarea>
+        </div>
+        <div class="mb-4 string optional idea_author">
+            <label class="block string optional text-sm font-medium text-gray-600 mb-1" for="idea_author">Author :</label>
+            <input required required class="shadow appearance-none border border-gray-300 rounded w-full py-2 px-3 bg-white focus:outline-none focus:ring-0 focus:border-blue-500 text-gray-400 leading-6 transition-colors duration-200 ease-in-out string optional" type="text" name="idea[author]" id="idea_author">
+        </div>
+        <div class="flex justify-end w-full">
+            <button type="submit" class="bg-gray-800 px-4 w-fit py-1 px-2 font-medium rounded-lg text-sm px-5 py-2.5 rounded-xl  text-white" type="submit" name="commit" value="Submit" data-disable-with="Submit">
+                Submit
+            </button>
+        </div>
+    </form>
+    <div class=" mt-4 grid md:grid-cols-2 grid-cols-1 md:gap-6 gap-4  max-w-5xl mx-auto">
         <% @ideas.each do |idea| %>
-        <div class="py-2 rounded-xl px-2 pt-4 border border-gray-800 shadow-xl">
+        <div class="py-2 rounded-xl px-4 pt-4 border border-gray-400 shadow-md">
             <h1 class=" font-medium text-2xl"><%= idea.description %></h1>
             <h1 class="italic">-<%= idea.author %></h1>
         </div>
