--- a/app/views/Navbar/_navbar.html.erb
+++ b/app/views/Navbar/_navbar.html.erb
@@ -1,11 +1,13 @@
-<nav class="bg-gray-800 border-gray-200 max-w-[100rem] mx-auto font-dosis h-16 sticky top-0">
+<nav class="bg-gray-800 border-gray-200 max-w-[100rem] mx-auto font-dosis h-16 sticky top-0 z-30">
     <div class="h-full w-full px-4 items-center flex justify-between max-w-7xl mx-auto">
-        <div>
+        <a href="/">
             <h1 class="font-bold text-white text-3xl">Ideator</h1>
-        </div>
+        </a>
         <div class="flex gap-4 ">
-            <h1 class="text-white">Home </h1>
-            <h1 class="text-white">About </h1>
+             <a href="/" class="block py-2 px-3 text-white">Home</a>
+            <a href="/about" class="block py-2 px-3 text-white">About</a>
+           <a href="/random" class="block py-2 px-3 text-white">Random</a>
+        </li>
         </div>
     </div>
 </nav>
