--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,9 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body class="relative">
+  <body class="relative bg-gray-50">
   <%=render 'Navbar/navbar' %>
+    <%= render 'shared/flash_messages' %>
     <%= yield %>
   <%=render 'Footer/footer' %>
   </body>
